[package]
name = "ship_compliant_v2_rb"
version = "0.1.0"
edition = "2021"
authors = ["Julian Giamblanco <giamblanco.julian@gmail.com>"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
    anyhow               = "1.0.86"
    base64               = "0.22.1"
    hyper                = "1.4.1"
    magnus               = { version = "0.7.1" }
    reqwest              = "0.12.5"
    serde                = "1.0.208"
    serde_magnus         = { git = "https://github.com/oatmealdealer/serde-magnus.git", branch = "update-magnus" }
    ship_compliant_v2_rs = { git = "https://github.com/oatmealdealer/ship_compliant_v2_rs.git" }
    tokio                = { version = "1.39.3", features = ["rt-multi-thread"] }
